# what-did-i-get-done-this-week

./: .gitignore  README.md  SHARE.md  SKILL.md  install.sh  pyproject.toml  setup.sh  weekly-review.sh
.github/workflows/: pages.yml
archive/: .env.example  weekly-review.sh
docs/: _config.yml  api.md  configuration.md  index.md  installation.md  render.md
src/what_did_i_get_done_this_week/: __init__.py  cli.py  config.py  core.py  formatters.py  models.py  readers.py  scheduled_run.py
src/what_did_i_get_done_this_week/scheduling/: __init__.py  applescript_popup.py  browser_popup.py  daemon.py  native_popup.py  popup.py  scheduler.py  tkinter_popup.py
tests/: test_cli.py
