[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "what-did-i-get-done-this-week"
version = "0.1.1"
description = "A beautiful CLI tool to track your weekly accomplishments and generate professional accountability reports"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Francisco Javier Arceo"},
]
keywords = ["productivity", "cli", "github", "weekly-review", "accountability", "reporting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/franciscojavierarceo/what-did-i-get-done-this-week"
Repository = "https://github.com/franciscojavierarceo/what-did-i-get-done-this-week"
Issues = "https://github.com/franciscojavierarceo/what-did-i-get-done-this-week/issues"

[project.scripts]
receipts = "what_did_i_get_done_this_week.cli:main"
what-did-i-get-done-this-week = "what_did_i_get_done_this_week.cli:main"
weekly-review = "what_did_i_get_done_this_week.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/what_did_i_get_done_this_week"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]